Fix flex-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,9 @@ body {
   text-align: center;
 }
 .userCards {
+  margin-top: 10%;
   display: flex;
   width: 100%;
-  margin-top: 15%;
   justify-content: space-around;
   align-items: stretch;
   flex-wrap: wrap;
@@ -22,7 +22,7 @@ body {
   flex: 1 1 300px;
   max-width: 300px;
   min-width: 240px;
-  margin: 0 20px 0 20px;
+  margin: 30px;
   transform: scale(1.1);
 }
 .Section {
